--- a/IST322/Contact.html
+++ b/IST322/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Contact PlayStationMe.com">
-  <meta name="author" content="Your Name">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
   <title>Contact Us - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
