--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Bundles & Deals at PlayStationMe.com">
-  <meta name="author" content="Your Name">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
   <title>Bundles & Deals - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
-  
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-305657766-1');
+  </script>
 </head>
 <body>
   <header>
